--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -13,6 +13,8 @@
 	<script src="js/axios.js"></script>
 	<script src="js/vue.js"></script>
 	<script src="js/vue-router.js"></script>
-	<script src="components/signUp.js"></script>
+	<script src="components/signUp.js"></script>	
+	<script src="components/userPage.js"></script>	
+	<script src="components/profileModification.js"></script>
 	<script src="app/app.js"></script>
 </html>
