--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -14,5 +14,6 @@
 	<script src="js/vue.js"></script>
 	<script src="js/vue-router.js"></script>
 	<script src="components/signUp.js"></script>
+	<script src="components/viewRentACarObject.js"></script>
 	<script src="app/app.js"></script>
 </html>
