--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CarRental</title>
+     <link href="styles/signUpStyle.css" rel="stylesheet">
 </head>
 <body>
     <div id="users">
