--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>CarRental</title>
      <link href="styles/signUpStyle.css" rel="stylesheet">
+     <link href="styles/logInStyle.css" rel="stylesheet">
 </head>
 <body>
     <div id="users">
@@ -14,6 +15,7 @@
 	<script src="js/axios.js"></script>
 	<script src="js/vue.js"></script>
 	<script src="js/vue-router.js"></script>
+	<script src="components/logIn.js"></script>
 	<script src="components/signUp.js"></script>	
 	<script src="components/userPage.js"></script>	
 	<script src="components/profileModification.js"></script>
