modified path for creating a user

--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -5,6 +5,7 @@
     <title>CarRental</title>
      <link href="styles/signUpStyle.css" rel="stylesheet">
      <link href="styles/logInStyle.css" rel="stylesheet">
+     <link href="styles/rentACarStyle.css" rel="stylesheet">
 </head>
 <body>
     <div id="users">
