--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -21,5 +21,6 @@
 	<script src="components/userPage.js"></script>	
 	<script src="components/profileModification.js"></script>
 	<script src="components/viewRentACarObject.js"></script>
+	<script src="components/createObject.js"></script>
 	<script src="app/app.js"></script>
 </html>
