--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -6,6 +6,8 @@
      <link href="styles/signUpStyle.css" rel="stylesheet">
      <link href="styles/logInStyle.css" rel="stylesheet">
      <link href="styles/rentACarStyle.css" rel="stylesheet">
+     <link href="styles/createObjectStyle.css" rel="stylesheet">
+     <link href="styles/CreateVehicleStyle.css" rel="stylesheet">
 </head>
 <body>
     <div id="users">
@@ -22,5 +24,6 @@
 	<script src="components/profileModification.js"></script>
 	<script src="components/viewRentACarObject.js"></script>
 	<script src="components/createObject.js"></script>
+	<script src="components/createVehicle.js"></script>
 	<script src="app/app.js"></script>
 </html>
