--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -8,6 +8,8 @@
      <link href="styles/rentACarStyle.css" rel="stylesheet">
      <link href="styles/createObjectStyle.css" rel="stylesheet">
      <link href="styles/CreateVehicleStyle.css" rel="stylesheet">
+     <link href="styles/detailedObjectStyle.css" rel="stylesheet">
+     
 </head>
 <body>
     <div id="users">
@@ -25,5 +27,6 @@
 	<script src="components/viewRentACarObject.js"></script>
 	<script src="components/createVehicle.js"></script>
 	<script src="components/createObject.js"></script>
+	<script src="components/detailedObject.js"></script>
 	<script src="app/app.js"></script>
 </html>
