search/filter users

--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -28,5 +28,6 @@
 	<script src="components/createVehicle.js"></script>
 	<script src="components/createObject.js"></script>
 	<script src="components/detailedObject.js"></script>
+	<script src="components/viewAllUsers.js"></script>
 	<script src="app/app.js"></script>
 </html>
