--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -10,6 +10,9 @@
      <link href="styles/createManagerForObjectStyle.css" rel="stylesheet">
      <link href="styles/detailedObjectStyle.css" rel="stylesheet">
      <link href="styles/CreateVehicleStyle.css" rel="stylesheet">
+     <link href="styles/updateVehicle.css" rel="stylesheet">
+     <link href="styles/managersObjecrs.css" rel="stylesheet">
+     
 </head>
 <body>
     <div id="users">
@@ -30,6 +33,8 @@
 	<script src="components/detailedObject.js"></script>
 	<script src="components/viewAllUsers.js"></script>
 	<script src="components/createManagerForObject.js"></script>
+	<script src="components/updateVehicle.js"></script>
+	<script src="components/managersObjects.js"></script>
 
 	<script src="app/app.js"></script>
 </html>
