--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -30,6 +30,6 @@
 	<script src="components/detailedObject.js"></script>
 	<script src="components/viewAllUsers.js"></script>
 	<script src="components/createManagerForObject.js"></script>
-
+	<script src="components/managerPage.js"></script>
 	<script src="app/app.js"></script>
 </html>
