--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -28,8 +28,8 @@
 	<script src="components/createVehicle.js"></script>
 	<script src="components/createObject.js"></script>
 	<script src="components/detailedObject.js"></script>
-	<script src="components/viewAllUsers.js"></script>
 	<script src="components/createManagerForObject.js"></script>
 	<script src="components/managerPage.js"></script>
+	<script src="components/adminPage.js"></script>
 	<script src="app/app.js"></script>
 </html>
