--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -31,5 +31,6 @@
 	<script src="components/createManagerForObject.js"></script>
 	<script src="components/managerPage.js"></script>
 	<script src="components/adminPage.js"></script>
+	<script src="components/createComment.js"></script>
 	<script src="app/app.js"></script>
 </html>
