--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -11,7 +11,7 @@
      <link href="styles/detailedObjectStyle.css" rel="stylesheet">
      <link href="styles/CreateVehicleStyle.css" rel="stylesheet">
      <link href="styles/updateVehicle.css" rel="stylesheet">
-     <link href="styles/managersObjecrs.css" rel="stylesheet">
+     <link href="styles/managersObjects.css" rel="stylesheet">
      
 </head>
 <body>
