--- a/WebShopREST/WebContent/index.html
+++ b/WebShopREST/WebContent/index.html
@@ -37,7 +37,8 @@
 	<script src="components/createComment.js"></script>
 	<script src="components/updateVehicle.js"></script>
 	<script src="components/managersObjects.js"></script>
-	<script src="components/basket.js"></script>	
+	<script src="components/basket.js"></script>
+	<script src="components/suspiciousUsers.js"></script>	
 	<script src="app/app.js"></script>
 	
 </html>
